# tree-sitter-coda

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  biome.json  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-coda.pc.in
bindings/c/tree_sitter/: tree-sitter-coda.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_coda/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCodaTests/: TreeSitterCodaTests.swift
queries/coda/: highlights.scm
src/: grammar.json  node-types.json  parser.c
